<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".perplexity.activities.PerplexityActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/perplexity_math_model"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/screen_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atvPerplexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perplexity_will_be_displayed_here"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/aetProbabilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/enter_comma_seperated_probabilities"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>